demo32.html pan and zoom working

--- a/index.html
+++ b/index.html
@@ -11,11 +11,42 @@
     </head>
     <body>
         <div><a href="READMECAT.php">EDIT README</a></div><br/>
-        <h1>Demos</h1>
+        <div><a href="http://catmac.local/~cat/catjscanvas/">Work SITE</a></div><br/>
+        <div><a href="http://catjstuts.cat9.com/catjscanvas/">PUBLIC SITE</a></div><br/>
+        <h1>Demos CANVAS</h1>
         <ol>
             <li><a href="demo01.html">Demo01 - Basic Lines</a></li>
             <li><a href="demo02.html">Demo02 - Line Joins</a></li>
             <li><a href="demo03.html">Demo03 - Shapes and fills</a></li>
+            <li><a href="demo04.html">Demo04 - Fill gradient</a></li>
+            <li><a href="demo05.html">Demo05 - Images</a></li>
+            <li><a href="demo06.html">Demo06 - Text</a></li>
+            <li><a href="demo07.html">xDemo07 - Composites</a></li>
+            <li><a href="demo08.html">xDemo08 - Transformations</a></li>
+            <li><a href="demo09.html">xDemo09 - Animation and Image Data URL</a></li>
+        </ol>
+        <h1>Demos KineticJS</h1>
+        <ol>
+            <li><a href="demo10.html">xDemo10 - Shapes</a></li>
+            <li><a href="demo11.html">xDemo11 - Events</a></li>
+            <li><a href="demo12.html">Demo12 - Drag and Drop</a></li>
+            <li><a href="demo13.html">Demo13 - Layering</a></li>
+            <li><a href="demo14.html">xDemo14 - Dynamic Styling</a></li>
+            <li><a href="demo15.html">xDemo15 - Transitions</a></li>
+            <li><a href="demo16.html">xDemo16 - Animation</a></li>
+            <li><a href="demo17.html">xDemo17 - Stage</a></li>
+            <li><a href="demo18.html">xDemo18 - Transformations</a></li>
+        </ol>
+        <h1>Demo Integrations - TOUCH ONLY</h1>
+        <ol>
+            <li><a href="demo20.html">Demo20 - Scale stage multi-touch</li>
+            <li><a href="demo21.html">Demo21 - Scale objects multi-touch</li>
+        </ol>
+        <h1>Demo Integrations - Mixed Mode</h1>
+        <ol>
+            <li><a href="demo30.html">Demo30 - Scale and Pan Canvas</li>
+            <li><a href="demo31.html">Demo31 - DragnDrop Resize Kinetic layers</li>
+            <li><a href="demo32.html">Demo32 - Pan Resize Kinetic Layers</li>
         </ol>
     </body>
 </html>
