cleanup and remove from catmac

--- a/index.html
+++ b/index.html
@@ -39,14 +39,15 @@
         </ol>
         <h1>Demo Integrations - TOUCH ONLY</h1>
         <ol>
-            <li><a href="demo20.html">Demo20 - Scale stage multi-touch</li>
-            <li><a href="demo21.html">Demo21 - Scale objects multi-touch</li>
+            <li><a href="demo20.html">Demo20 - Scale stage multi-touch</a></li>
+            <li><a href="demo21.html">Demo21 - Scale objects multi-touch</a></li>
+            <li><a href="demo22.html">Demo22 - Scale and pan stage multi-touch</a></li>
         </ol>
         <h1>Demo Integrations - Mixed Mode</h1>
         <ol>
-            <li><a href="demo30.html">Demo30 - Scale and Pan Canvas</li>
-            <li><a href="demo31.html">Demo31 - DragnDrop Resize Kinetic layers</li>
-            <li><a href="demo32.html">Demo32 - Pan Resize Kinetic Layers</li>
+            <li><a href="demo30.html">Demo30 - Scale and Pan Canvas</a></li>
+            <li><a href="demo31.html">Demo31 - DragnDrop Resize Kinetic layers</a></li>
+            <li><a href="demo32.html">Demo32 - Pan Resize Kinetic Layers</a></li>
         </ol>
     </body>
 </html>
